--- a/index.html
+++ b/index.html
@@ -18,35 +18,38 @@
 <section class="dashboard">
 
     <!-- ===== TOP BIG PANELS ===== -->
-    <div class="grid-top">
+   <div class="grid-top">
 
-        <div class="panel big">
-            <div class="panel-top">
-                <span class="panel-header">📅 ABMELDUNGEN</span>
-                <span id="abmCounter" class="badge">0 aktiv</span>
-            </div>
-            <p>Abwesenheiten & Urlaubsanträge.</p>
-        </div>
-
-        <div class="panel big highlight">
-            <div class="panel-header">📢 NEWS & INFOS</div>
-            <p>Wichtige Ankündigungen.</p>
-        </div>
-
-        <div class="panel big">
-            <div class="panel-top">
-                <span class="panel-header">📝 BEWERBER</span>
-                <span id="bewerberCounter" class="badge">0 neu</span>
-            </div>
-            <p>Neue Bewerbungen prüfen.</p>
-        </div>
-
-        <div class="panel big center">
-            <div class="panel-header">📋 Service</div>
-        </div>
-
+    <!-- 1. NEWS -->
+    <div class="panel big">
+        <div class="panel-header">📢 NEWS & INFOS</div>
+        <p>Wichtige Ankündigungen.</p>
     </div>
 
+    <!-- 2. ABMELDUNGEN -->
+    <div class="panel big">
+        <div class="panel-top">
+            <span class="panel-header">📅 ABMELDUNGEN</span>
+            <span id="abmCounter" class="badge">0 aktiv</span>
+        </div>
+        <p>Abwesenheiten & Urlaubsanträge.</p>
+    </div>
+
+    <!-- 3. BEWERBER -->
+    <div class="panel big">
+        <div class="panel-top">
+            <span class="panel-header">📝 BEWERBER</span>
+            <span id="bewerberCounter" class="badge">0 neu</span>
+        </div>
+        <p>Neue Bewerbungen prüfen.</p>
+    </div>
+
+    <!-- 4. SERVICE -->
+    <div class="panel big center">
+        <div class="panel-header">📋 Service</div>
+    </div>
+
+</div>
     <!-- ===== SMALL PANELS ===== -->
     <div class="grid-bottom">
 
