--- a/index.html
+++ b/index.html
@@ -10,68 +10,51 @@
 <header>
     <a href="index.html" class="brand-link">🍔 Burgershot Intern</a>
     <div>
-        <span id="welcomeUser" style="margin-right:15px;"></span>
+        <span id="welcomeUser"></span>
         <button onclick="logout()">Logout</button>
     </div>
 </header>
 
 <section class="dashboard">
 
-    <!-- ===== TOP BIG PANELS ===== -->
-   <div class="grid-top">
+    <div class="grid-top">
 
-    <!-- 1. NEWS -->
-    <div class="panel big">
-        <div class="panel-header">📢 NEWS & INFOS</div>
-        <p>Wichtige Ankündigungen.</p>
-    </div>
-
-    <!-- 2. ABMELDUNGEN -->
-    <div class="panel big">
-        <div class="panel-top">
-            <span class="panel-header">📅 ABMELDUNGEN</span>
-            <span id="abmCounter" class="badge">0 aktiv</span>
+        <div class="panel big">
+            <div class="panel-header">📢 NEWS & INFOS</div>
+            <p>Wichtige Ankündigungen.</p>
         </div>
-        <p>Abwesenheiten & Urlaubsanträge.</p>
-    </div>
 
-    <!-- 3. BEWERBER -->
-    <div class="panel big">
-        <div class="panel-top">
-            <span class="panel-header">📝 BEWERBER</span>
-            <span id="bewerberCounter" class="badge">0 neu</span>
+        <div class="panel big">
+            <div class="panel-top">
+                <span class="panel-header">📅 ABMELDUNGEN</span>
+                <span id="abmCounter" class="badge">0 aktiv</span>
+            </div>
+            <p>Abwesenheiten & Urlaubsanträge.</p>
         </div>
-        <p>Neue Bewerbungen prüfen.</p>
+
+        <div class="panel big">
+            <div class="panel-top">
+                <span class="panel-header">📝 BEWERBER</span>
+                <span id="bewerberCounter" class="badge">0 neu</span>
+            </div>
+            <p>Neue Bewerbungen prüfen.</p>
+        </div>
+
+        <div class="panel big center">
+            <div class="panel-header">📋 Service</div>
+        </div>
+
     </div>
 
-    <!-- 4. SERVICE -->
-    <div class="panel big center">
-        <div class="panel-header">📋 Service</div>
-    </div>
-
-</div>
-    <!-- ===== SMALL PANELS ===== -->
     <div class="grid-bottom">
 
-        <div class="panel small">
-            🍔<br>Orders
-        </div>
-
-        <div class="panel small">
-            🛒<br>Lager
-        </div>
-
-        <div class="panel small">
-            🎵<br>Musik
-        </div>
-
-        <div class="panel small">
-            👕<br>Kleidung
-        </div>
+        <div class="panel small">🍔<br>Orders</div>
+        <div class="panel small">🛒<br>Lager</div>
+        <div class="panel small">🎵<br>Musik</div>
+        <div class="panel small">👕<br>Kleidung</div>
 
     </div>
 
-    <!-- ===== MANAGEMENT ===== -->
     <div id="adminPanel" class="management-bar"
          onclick="location.href='management.html'">
         <div>⭐ Management Center</div>
@@ -80,16 +63,38 @@
 
 </section>
 
+<!-- PIN MODAL -->
+<div class="modal-backdrop" id="pinModal" style="display:none;">
+    <div class="modal">
+        <h2>🔒 PIN ändern</h2>
+        <p>Bitte setze deine persönliche 4-stellige PIN.</p>
+        <input type="password" id="newPin" maxlength="4" placeholder="Neue PIN">
+        <button onclick="savePin()">Speichern</button>
+    </div>
+</div>
+
 <script src="script.js"></script>
 <script>
 requireLogin();
 
-window.onload = () => {
+document.addEventListener("DOMContentLoaded", () => {
+
     const user = sessionStorage.getItem("loggedInUser");
+    const accs = getAccounts();
+
+    if (!user || !accs[user]) {
+        logout();
+        return;
+    }
+
     document.getElementById("welcomeUser").innerText = "Moin, " + user;
 
     if (isAdmin()) {
         document.getElementById("adminPanel").style.display = "flex";
+    }
+
+    if (accs[user].isFirstLogin === true) {
+        document.getElementById("pinModal").style.display = "flex";
     }
 
     document.getElementById("abmCounter").innerText =
@@ -97,7 +102,25 @@ window.onload = () => {
 
     document.getElementById("bewerberCounter").innerText =
         getNeueBewerberCount() + " neu";
-};
+});
+
+function savePin() {
+    const pin = document.getElementById("newPin").value.trim();
+    const user = sessionStorage.getItem("loggedInUser");
+    const accs = getAccounts();
+
+    if (!/^\d{4}$/.test(pin)) {
+        alert("PIN muss genau 4 Zahlen enthalten.");
+        return;
+    }
+
+    accs[user].password = pin;
+    accs[user].isFirstLogin = false;
+    saveAccounts(accs);
+
+    document.getElementById("pinModal").style.display = "none";
+    alert("PIN erfolgreich gesetzt!");
+}
 </script>
 
 </body>
