--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </section>
 
 <!-- PIN MODAL -->
-<div class="modal-backdrop" id="pinModal" style="display:none;">
+<div class="modal-backdrop" id="pinModal">
     <div class="modal">
         <h2>🔒 PIN ändern</h2>
         <p>Bitte setze deine persönliche 4-stellige PIN.</p>
