--- a/management.html
+++ b/management.html
@@ -17,10 +17,10 @@
 
     <!-- NAVIGATION -->
     <div class="management-tabs">
-        <button onclick="showSection('accounts')">Accountverwaltung</button>
-        <button onclick="showSection('mitarbeiter')">Mitarbeiterliste</button>
-        <button onclick="showSection('dokumente')">Dokumente</button>
-        <button onclick="showSection('sheets')">Sheets</button>
+        <button class="tab-btn active" onclick="showSection('accounts', this)">Accountverwaltung</button>
+        <button class="tab-btn" onclick="showSection('mitarbeiter', this)">Mitarbeiterliste</button>
+        <button class="tab-btn" onclick="showSection('dokumente', this)">Dokumente</button>
+        <button class="tab-btn" onclick="showSection('sheets', this)">Sheets</button>
     </div>
 
     <!-- ================= ACCOUNTS ================= -->
